--- a/SpringRestBook/src/main/resources/application.properties
+++ b/SpringRestBook/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.application.name=book-service
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details="ALWAYS"
+
 
